--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,146 +1,224 @@
-html, body, .App, #root{
-  height:100%;
-  width:100%;
-  margin:0;
+html,
+body,
+.App,
+#root {
+  height: 100%;
+  width: 100%;
+  margin: 0;
   font-size: 14px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
-    
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-p{
-  margin:0
+p {
+  margin: 0;
 }
-.landing{
-  height:100%;
-  width:100%;
-  position:relative
+.landing {
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
 
-.chatbot{
-  display:block;
+.chatbot {
+  display: block;
   position: fixed;
-   right:0px;
-  bottom:0px;
-  height:400px;
-  width:400px;
+  right: 0px;
+  bottom: 0px;
+  height: 500px;
+  width: 400px;
   border-radius: 20px 0 0 0;
-  border: 2px #f3f3f3 solid
-
+  border: 2px #f3f3f3 solid;
 }
 
-.chatbotInput{
-  width:100%
+.chatbotInput {
+  width: 100%;
 }
 
-.chatbotInput input{
+.chatbotInput input {
   position: fixed;
   bottom: 0;
-  width:100%;
-  margin:0;
-  padding:10px;
-  border:none;
-  height:50px;
+  width: 400px;
+  margin: 0;
+  padding: 10px;
+  border: none;
+  height: 60px;
   box-sizing: border-box;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  outline: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.chatbotMessagesContainer{
+.chatbotMessagesContainer {
   overflow-y: auto;
-  height:300px;
-  padding:20px;
-    
+  height: 400px;
+  padding: 20px;
 }
 
-.chatbotHeader{
-  position:absolute;
+.chatbotHeader {
+  position: absolute;
   margin-top: -40px;
   /* border:1px solid black; */
-  width:100%;
-  height:40px;
-  display:flex;
+  width: 100%;
+  height: 40px;
+  display: flex;
   justify-content: flex-end;
   align-items: center;
-  
 }
-.chatbotheaderX{
+.chatbotheaderX {
   padding-right: 20px;
   font-weight: bold;
-  font-size:20px;
-  color: #333
+  font-size: 20px;
+  color: #333;
+  font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
-.chatbotheaderX:hover{
- cursor: pointer;
+.chatbotheaderX:hover {
+  cursor: pointer;
 }
 
-.chatbotMessage{
-  display:flex;
-  margin: 10px 0
+.chatbotMessage {
+  display: flex;
+  margin: 10px 0;
 }
 
-.chatbotMessageFloat{
-  display:flex;
+.chatbotMessageFloat {
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  margin: 10px 0
+  margin: 15px 0;
 }
 
-.avatarAnBot{
-  background:red;
+.avatarAnBot {
+  background: rgb(236, 177, 177);
+  border: 2px solid rgb(182, 119, 119);
   border-radius: 25px;
-  width:50px;
-  height:50px;
-  display:flex;
-  align-items: center;
-  justify-content: center
-}
-
-.avatarUser{
-  background:blue;
-  border-radius: 25px;
-  width:50px;
-  height:50px;
-  display:flex;
+  min-width: 50px;
+  min-height: 50px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  order: 2
 }
 
-.messageArea{
+.avatarUser {
+  background: rgb(208, 208, 252);
+  border: solid 2px rgb(187, 187, 255);
+  border-radius: 25px;
+  min-width: 50px;
+  min-height: 50px;
   display: flex;
   align-items: center;
-  max-width:310px;
+  justify-content: center;
+  order: 2;
+}
+
+.messageArea {
+  display: flex;
+  align-items: center;
+  max-width: 310px;
   margin-left: 20px;
-  padding:5px 15px;
-    box-sizing: border-box;
+  padding: 10px 15px;
+  box-sizing: border-box;
   background: #f8f8f8;
   border-radius: 15px;
-  min-width: 100px;
-  min-height: 40px
+  min-width: 50px;
+  min-height: 50px;
 }
-.messageAreaLeft{
+.messageAreaLeft {
   display: flex;
   align-items: center;
-  max-width:310px;
+  max-width: 310px;
   margin-right: 20px;
-  padding:5px 15px;
+  padding: 10px 15px;
   box-sizing: border-box;
-  background: #807070;
+  background: #eaf8fd;
   border-radius: 15px;
-  min-width: 100px;
-  min-height: 40px
-  
-  
+  min-width: 50px;
+  min-height: 50px;
+  border: 1px solid #def3fa;
 }
 .messageAreaLeft p {
   width: 100%;
-  text-align: right
+  line-height: 20px;
+  /* text-align: right */
 }
-.border{
-  border: 1px solid black
+.border {
+  border: 1px solid black;
 }
 
 .small {
-  width:200px
+  width: 200px;
+}
+
+.open {
+  display: block;
+}
+
+.close {
+  display: none;
+}
+
+.chatbotButtonContainer {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+.chatbotButton {
+  margin-bottom: 30px;
+  margin-right: 30px;
+  background: #f8f8f8;
+  height: 50px;
+  width: 150px;
+  border: 1px solid #dad7d7;
+  border-radius: 20px;
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 3px #ccc;
+  font-family: inherit;
+  outline: none;
+  font-weight: bold;
+}
+
+.chatbotButton:hover {
+  transition: all 0.2s ease-in-out;
+  transform: scale(1.02);
+}
+
+.chatbotButton:active {
+  transition: all 0.1s ease-in-out;
+  transform: scale(0.95);
+}
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+.landing{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  
+
+}
+
+.landing h1{
+  font-size: 40px;
+  letter-spacing: 5px;
+  margin: 15px 0
+}
+
+.landing h2{
+  font-size: 20px;
+  letter-spacing: 3px;
+  margin: 15px 0
+}
+
+.landing button{
+  
+  letter-spacing: 3px;
+  margin: 15px 0
+}
+
+.landingImg{
+  width:200px;
+  margin: 15px 0
 }
