--- a/client/src/components/chatbot/Chatbot.css
+++ b/client/src/components/chatbot/Chatbot.css
@@ -73,3 +73,20 @@
 .close {
   display: none;
 }
+
+
+#scroll::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+} 
+
+#scroll::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: rgb(197, 197, 197);
+  height:30px !important
+}
+
+#scroll::-webkit-scrollbar-track {
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
